[tool.poetry]
name = "fastapi-learn"
version = "0.1.0"
description = ""
authors = ["Peskov Sergey <peskovdev@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {version = "^0.97.0", extras = ["all"]}
mypy = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pynvim = "^0.4.3"
isort = "^5.12.0"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Code-checkers
[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
# plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.black]
line-length = 100


[tool.isort]
known_local_folder = "app"
lines_after_imports = 2
multi_line_output = 3
line_length = 100
include_trailing_comma = true
